[tool.poetry]
name = "yma-anonymizer"
version = "0.1.0"
description = ""
authors = [ "Sergei Savvov <sergei.savvov@reforma.health>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
httpx = "^0.28.1"
openai = "^2.0.0"
lagom = "^2.7.7"
structlog = "^25.4.0"
tenacity = "^9.1.2"
pytest = "^8.4.2"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"
ruff = "^0.13.2"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [ "alembic", "tests", "scripts" ]

[tool.ruff.lint]
select = [ "E", "F", "B", "UP", "SIM", "PL", "RUF" ]
# Disable import sorting in Ruff since we use isort
ignore = [ "I001", "E203" ]

[tool.ruff.lint.extend-per-file-ignores]
"app/services/prompts.py" = [ "E501", "RUF001" ]

[tool.mypy]
python_version = "3.11"
plugins = [ "pydantic.mypy" ]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
check_untyped_defs = true
exclude = [ "alembic/", "scripts/", "tests/" ]
